syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto";
package org.loopring.lightcone.proto;

import "ring.proto";
import "order.proto";
import "eth_jsonrpc.proto";

// 兼容1.0
enum TxStatus {
    TX_STATUS_UNKNOWN = 0;
    TX_STATUS_PENDING = 1;
    TX_STATUS_SUCCESS = 2;
    TX_STATUS_FAILED = 3;
    TX_STATUS_DISMISS = 4;  // 该状态不一定有用
}

// 兼容1.0
enum TxType {
    TX_TYPE_UNKNOWN               = 0;
    TX_TYPE_APPROVE               = 1;
    TX_TYPE_SEND                  = 2;
    TX_TYPE_RECEIVE               = 3;
    TX_TYPE_SELL                  = 4;
    TX_TYPE_BUY                   = 5;
    TX_TYPE_CONVERT_INCOME        = 7;
    TX_TYPE_CONVERT_OUTCOME       = 8;
    TX_TYPE_CANCEL_ORDER          = 9;
    TX_TYPE_CUTOFF                = 10;
    TX_TYPE_CUTOFF_PAIR           = 11;
    TX_TYPE_UNSUPPORTED_CONTRACT  = 12;
    TX_TYPE_LRC_FEE               = 13;
    TX_TYPE_LRC_REWARD            = 14;
}

message FullTransaction {
    Transaction tx = 1;
    TraceTransaction trace= 2;
    TransactionReceipt receipt = 3;
    // todo block
}

enum TxHeaderSource {
    TX_FROM_TX = 0;
    TX_FROM_TRACE_TX = 1;
    TX_FROM_TRACE_CALL = 2;
    TX_FROM_RECEIPT_LOG = 3;
}

message TxHeader {
    string tx_hash  = 1;
    int32 tx_index = 2;         // tx在block中index，pending时为0
    int32 log_index = 3;        // log在transaction receipt index
    string block_number = 4;
    string block_hash = 5;
    string from = 6;
    string to = 7;
    string value = 8;
    string gas_price = 9;       // transaction&trace gas并不一致
    string gas_used = 10;
    string gas_limit = 11;
    string nonce = 12;
    string log_address = 13;
    TxStatus status = 14;
    TxHeaderSource source = 15;
    string trace_from = 16;
    string trace_to = 17;
    string trace_value = 18;
    string trace_gas = 19;
    string trace_gas_used = 20;
}

message AddressBalanceChanged {
    string token = 1;
    string owner = 2;
    string value = 3;
    bool income = 4;
    TxHeader tx_header = 5;
}

message Transfer {
    string token = 1;
    string sender = 2;
    string receiver = 3;
    string value = 4;
    TxHeader tx_header = 5;
}

// 普通的以太坊转账
message EthTransfer {
    TxHeader tx_header = 1;
}

// 不支持的合约
message UnsupportedContract {
    TxHeader tx_header = 1;
}

message Approve {
    string owner = 1;
    string spender = 2;
    string value = 3;
    TxHeader tx_header = 4;
}

message WethDeposit {
    string owner = 1;
    string value = 2;
    TxHeader tx_header = 3;
}

message WethWithdrawal {
    string owner = 1;
    string value = 2;
    TxHeader tx_header = 3;
}

// 来源于pending filter&&rpc raw transaction，都往ringMemPool发送
message RingDetectedInMemPoll {
    string ring_hash = 2;
    repeated string order_hash = 3;
    TxHeader tx_header = 4;
}

message OrderFilled {
    string ring_index = 1;
    string ring_hash = 2;
    string pre_order_hash = 3;
    string order_hash = 4;
    string next_order_hash = 5;
    string owner = 6;
    string token_s = 7;
    string token_b = 8;
    string amount_s = 9;
    string amount_b = 10;
    string lrc_reward = 11;
    string lrc_fee = 12;
    string split_s = 13;
    string split_b = 14;
    int32 fill_index = 15;
    TxHeader tx_header = 16;
}

message SubmitRing {
    Ring ring = 1;
    TxHeader tx_header = 2;
}

message RingMined {
    repeated OrderFilled fills = 2;
    TxHeader tx_header = 3;
}

message CancelOrder {
    RawOrder order = 1;
    string cancel_amount = 2;
    TxHeader tx_header = 3;
}

message OrderCancelled {
    string order_hash = 1;
    string amount = 2;
    TxHeader tx_header = 3;
}

message Cutoff {
    string owner = 1;
    int32 cutoff = 2;
    TxHeader tx_header = 3;
}

message CutoffPair {
    string owner = 1;
    string token1 = 2;
    string token2 = 3;
    int32 cutoff = 4;
    TxHeader tx_header = 5;
}

message ChainRolledBack {
    string detected_block_number = 1;
    string delected_block_hash = 2;
    string fork_block_number = 3;
    string fork_block_hash = 4;
    bool fork = 5;
}

message HeartBeat {
    bytes block_number = 1;
}
